--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ services:
 
 before_install:
   - docker pull influxdb:1.2
-  - docker run -p 8086:8086 influxdb:1.2
+  - docker run -d -p 8086:8086 influxdb:1.2
