--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -25,8 +25,7 @@ log4j.rootLogger=INFO,stdout,influxdb
 #log4j.appender.stdout.layout=org.apache.log4j.SimpleLayout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%-5p [%t]: %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 #log4j.category.org.apache=INFO, stdout
 log4j.logger.info.scheinfrei.log4j= INFO
-
